...
  const placeholderColor = dark ? colors.search.placeholder : colors.text.tertiary;
  const iconColor = dark ? colors.icon.tertiary : colors.icon.tertiary;

  return (
    <View style={[styles.container, { backgroundColor: bgColor }]} accessibilityRole="search">
      <Icon
        name="Search"
        size={20}
        color={iconColor}

      />
      <TextInput
        style={[styles.input, { color: textColor }]}
...
